[project]
name = "crash-www26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "kaleido>=1.1.0",
    "langchain[google-genai]>=0.3.27",
    "matplotlib>=3.10.6",
    "neo4j>=6.0.2",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
